# rust-tensorflow-mirnet-lowlight

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Readme.md  build.ps1
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.tsx  Login.tsx  api.ts  blobs.ts
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  cuda.ps1
server/dataset/: Readme.md
server/src/: image_processing.rs  main.rs  single_file.rs  users.rs
server/src/image_processing/: endpoint.rs  mirnet_model.rs  single_file.rs
server/src/users/: auth.rs  endpoints.rs  hashing.rs  user_db.rs
src/: conversions.rs  main.rs  mirnet_model.rs  single_file.rs
