[package]
name = "rust-tensorflow-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = { version = "0.17.0", features = ["tensorflow_gpu"] }
image = "0.23.14"
anyhow = "1.0"
thiserror = "1.0"