[package]
name = "mirnet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "=0.6.0-beta.6"
actix-multipart = "=0.4.0-beta.10"
actix-web = "=4.0.0-beta.14"
anyhow = "1.0"
futures = "0.3"
image = "0.23.14"
structopt = "0.3"
tensorflow = { version = "0.17.0", features = ["tensorflow_gpu"] }
thiserror = "1.0"